# llvm-mos-sdk

mos-platform/: CMakeLists.txt
mos-platform/cx16os/: CMakeLists.txt  clang.cfg  cx16os.h  link.ld
